<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/inf" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/map" />

        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/info1"
            android:title="@string/dtt" />
    </group>

    <item android:title="@string/SobreNosotros">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/ac" />
        </menu>
    </item>

</menu>
