<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"


        android:elevation="1dp"
        android:foregroundGravity="top"

        android:soundEffectsEnabled="false"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardElevation="15dp"
        app:contentPaddingLeft="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_Dep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dep"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_Cap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ct"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_Dir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dr"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_Tel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tll"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/em"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="16sp"
                    tools:text="Departamento: " />

                <TextView
                    android:id="@+id/tvCap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="16sp"
                    tools:text="Ciudad:" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/tvDir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="13sp"
                    tools:text="Direccion: " />

                <TextView
                    android:id="@+id/tvTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="16sp"
                    tools:text="Telefono" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/tvemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="13sp"
                    tools:text="Email: " />

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>