<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_end_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.camil.navgooglemap.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center"
                    android:elevation="5dp"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="168dp"

                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="397dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:paddingTop="30dp"
                            app:srcCompat="@drawable/ll" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/informacion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/cardview_light_background"
                            android:text="@string/map"
                            android:textAlignment="center"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
                            android:textSize="18sp" />

                        <ImageButton
                            android:id="@+id/boton-map"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/cardview_light_background"
                            app:srcCompat="@drawable/mm" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Informacion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/cardview_light_background"
                            android:text="@string/inf"
                            android:textAlignment="center"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
                            android:textSize="18sp" />

                        <ImageButton
                            android:id="@+id/imageButton4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/cardview_light_background"
                            app:srcCompat="@drawable/ii" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/cardview_light_background"
                            android:visibility="gone"
                            app:srcCompat="@drawable/ppp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/cardview_light_background"
                            android:text="@string/ac"
                            android:textAlignment="center"
                            android:textColor="@color/common_google_signin_btn_text_light_pressed"
                            android:textSize="18sp" />

                        <ImageButton
                            android:id="@+id/imageButton7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/cardview_light_background"
                            app:srcCompat="@drawable/ab" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


        </ScrollView>

    </FrameLayout>


</android.support.constraint.ConstraintLayout>
